[package]
name = "clap-wrapper"
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] } # extra-traits for debugging

[dev-dependencies]
clap_derive = "4.4.7"
clap = { version = "4.4.10", features = ["derive"] }
